--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8083/auth/realms/baeldung
+          jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
   liquibase:
     change-log: classpath:/db/migration/db.migration-master.yml
