--- a/src/main/resources/db/migration/db.migration-master.yml
+++ b/src/main/resources/db/migration/db.migration-master.yml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
-      file: db/migration/db.migration-1.1-add-card.yml
+      file: db.migration-1.1-add-card.yml
+      relativeToChangelogFile: true
+  - include:
+      file: db.migration-1.2-add-columns.yml
+      relativeToChangelogFile: true
