--- a/src/main/resources/db/migration/db.migration-1.2-add-columns.yml
+++ b/src/main/resources/db/migration/db.migration-1.2-add-columns.yml
@@ -5,7 +5,7 @@ databaseChangeLog:
       changes:
         # Добавляем отсутствующее поле password в card_user
         - addColumn:
-            tableName: card_user
+            tableName: users
             columns:
               - column:
                   name: password
