--- a/src/main/resources/db/migration/db.migration-1.2-add-columns.yml
+++ b/src/main/resources/db/migration/db.migration-1.2-add-columns.yml
@@ -53,7 +53,7 @@ databaseChangeLog:
         - addForeignKeyConstraint:
             baseTableName: user_roles
             baseColumnNames: user_id
-            referencedTableName: card_user
+            referencedTableName: users
             referencedColumnNames: id
             constraintName: fk_user_roles_user
             deferrable: false
