--- a/src/main/resources/db/migration/db.migration-master.yml
+++ b/src/main/resources/db/migration/db.migration-master.yml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: db.migration-1.2-add-columns.yml
       relativeToChangelogFile: true
+  - include:
+      file: db.migration-1.3-update-users-roles.yml
+      relativeToChangelogFile: true
