--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,15 @@
 # application.yml — главный конфигурационный файл Spring Boot.
 #
 
+logging:
+  level:
+    # Основные логи Liquibase
+    liquibase: DEBUG
+    # SQL запросы которые выполняет Liquibase
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
+    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+    # Логирование connection pool
+    com.zaxxer.hikari: INFO
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5434/cardsdata
